# techshare_ros_pkg2

./: CMakeLists.txt  README.md  package.xml
action/: AdjustPosition.action  Charge.action  IntoDoghouse.action  PanTiltZoom.action  PatrolTask.action  PatrolTaskV2.action  Relocalize.action  SendCommand.action  SpecialMove.action  TriggerGoalSequence.action
msg/: CloudInfo.msg  ControllerMsg.msg  EmergencyButton.msg  FloorInfo.msg  FrontLightControl.msg  HalnaError.msg  HalnaState.msg  LEDControl.msg  ObstacleInfo.msg  PathWithDrivingMode.msg  Pose.msg  PoseStampedWithDrivingMode.msg  PtzInfo.msg  RcsTelemetry.msg  ScoreInfo.msg  ThermalInfo.msg  WaypointArray.msg
srv/: CalculateTarget.srv  CalculateTargetv2.srv  ChangeFloor.srv  ChangePicture.srv  DisplayMode.srv  FrontLightControl.srv  FulanghuaAction.srv  FulanghuaPose.srv  GetPCD.srv  PanTilt.srv  Params.srv  PlanTrigger.srv  SaveTarget.srv  SdkClient.srv  SendMsg.srv  SendString.srv  TargetId.srv  TemperatureBox.srv  TemperatureFullImage.srv  TemperaturePoint.srv  TextToSpeech.srv  Zoom.srv
